# ui-test-rs

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  build.rs
docs/: COPYRIGHT  ai_agent_instructions.md  architecture.md  design.md  next-steps.md  plan.md  prd.md  process.md  research.txt  status.md  tools.md
scripts/: build-all.sh
src/: error.rs  main.rs
tests/: cli_tests.rs
wiki/: Architecture.md  CLI-Interface.md  Configuration.md  Development-Guide.md  Home.md  Playwright-Client.md  Reporter.md  Sequences.md  Test-Loader.md  Test-Runner.md  Testing-Strategy.md
