[package]
name = "ui-test-rs"
version = "0.1.0-dev"
edition = "2021"
authors = ["Michael A Wright"]
description = "CLI tool for UI testing with Playwright MCP integration"
license = "MIT"
repository = "https://github.com/softwarewrighter/ui-test-rs"
homepage = "https://github.com/softwarewrighter/ui-test-rs"
keywords = ["testing", "ui", "playwright", "cli", "automation"]
categories = ["command-line-utilities", "development-tools::testing"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
